adding swagger tags for best documentation
